Added material from physical implementation paper

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,483 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2020-11-06 12:27:59 +0100 
+%% Created for Mugagroup at 2020-11-09 15:06:37 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Band1994,
+	Author = {Band,Y. B. and Tuvi,I.},
+	Date-Added = {2020-11-09 15:00:41 +0100},
+	Date-Modified = {2020-11-09 15:00:50 +0100},
+	Doi = {10.1063/1.466689},
+	Eprint = {https://doi.org/10.1063/1.466689},
+	Journal = {The Journal of Chemical Physics},
+	Number = {12},
+	Pages = {8869-8876},
+	Title = {Quantum rearrangement scattering calculations using the invariant imbedding method},
+	Url = {https://doi.org/10.1063/1.466689},
+	Volume = {100},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.466689}}
+
+@article{Singer1982,
+	Author = {Singer,Sherwin and Freed,Karl F. and Band,Yehuda B.},
+	Date-Added = {2020-11-09 14:58:11 +0100},
+	Date-Modified = {2020-11-09 14:58:34 +0100},
+	Doi = {10.1063/1.444048},
+	Eprint = {https://doi.org/10.1063/1.444048},
+	Journal = {The Journal of Chemical Physics},
+	Number = {4},
+	Pages = {1942-1950},
+	Title = {Invariant imbedding solution of driven (inhomogeneous) and homogeneous Schr{\"o}dinger equations},
+	Url = {https://doi.org/10.1063/1.444048},
+	Volume = {77},
+	Year = {1982},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.444048}}
+
+@phdthesis{Zeyen2016,
+	Author = {Zeyen, Manuel},
+	Date-Added = {2020-11-09 13:34:36 +0100},
+	Date-Modified = {2020-11-09 13:34:45 +0100},
+	Doi = {10.13140/RG.2.2.24368.15368},
+	Month = {05},
+	Title = {Focused Raman Beam Addressing for a Trapped-Ion Quantum Processor (Master Thesis)},
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.13140/RG.2.2.24368.15368}}
+
+@article{Wu2015,
+	Author = {Wu, Ning and Nanduri, Arun and Rabitz, Herschel},
+	Date-Added = {2020-11-09 13:21:39 +0100},
+	Date-Modified = {2020-11-09 13:22:13 +0100},
+	Doi = {10.1103/PhysRevB.91.041115},
+	Issue = {4},
+	Journal = {Phys. Rev. B},
+	Month = {Jan},
+	Numpages = {5},
+	Pages = {041115},
+	Publisher = {American Physical Society},
+	Title = {Optimal suppression of defect generation during a passage across a quantum critical point},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevB.91.041115},
+	Volume = {91},
+	Year = {2015},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevB.91.041115},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevB.91.041115}}
+
+@article{Khaneja2005,
+	Abstract = {In this paper, we introduce optimal control algorithm for the design of pulse sequences in NMR spectroscopy. This methodology is used for designing pulse sequences that maximize the coherence transfer between coupled spins in a given specified time, minimize the relaxation effects in a given coherence transfer step or minimize the time required to produce a given unitary propagator, as desired. The application of these pulse engineering methods to design pulse sequences that are robust to experimentally important parameter variations, such as chemical shift dispersion or radiofrequency (rf) variations due to imperfections such as rf inhomogeneity is also explained.},
+	Author = {Navin Khaneja and Timo Reiss and Cindie Kehlet and Thomas Schulte-Herbr{\"u}ggen and Steffen J. Glaser},
+	Date-Added = {2020-11-09 13:19:12 +0100},
+	Date-Modified = {2020-11-09 13:20:06 +0100},
+	Doi = {https://doi.org/10.1016/j.jmr.2004.11.004},
+	Issn = {1090-7807},
+	Journal = {Journal of Magnetic Resonance},
+	Keywords = {Pulse design, Sequence optimization, Time-optimal coherence transfer, Relaxation-optimized experiments, Time-optimal realization of unitary operators, Quantum gates, GRAPE algorithm, Optimal control theory},
+	Number = {2},
+	Pages = {296 - 305},
+	Title = {Optimal control of coupled spin dynamics: design of NMR pulse sequences by gradient ascent algorithms},
+	Url = {http://www.sciencedirect.com/science/article/pii/S1090780704003696},
+	Volume = {172},
+	Year = {2005},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S1090780704003696},
+	Bdsk-Url-2 = {https://doi.org/10.1016/j.jmr.2004.11.004}}
+
+@article{Chudesnikov1991,
+	Author = {Chudesnikov, DO and Yakovlev, VP},
+	Date-Added = {2020-11-09 13:15:29 +0100},
+	Date-Modified = {2020-11-09 13:15:39 +0100},
+	Journal = {Laser Physics},
+	Number = {1},
+	Pages = {110--119},
+	Publisher = {MAIK NAUKA/INTERPERIODICA/SPRINGER 233 SPRING ST, NEW YORK, NY 10013-1578 USA},
+	Title = {Bragg scattering on complex potential and formation of super-narrow momentum distributions of atoms in light fields},
+	Volume = {1},
+	Year = {1991}}
+
+@book{Levine1969,
+	Address = {Oxford},
+	Author = {Levine, Raphael D},
+	Date-Added = {2020-11-09 13:10:44 +0100},
+	Date-Modified = {2020-11-09 13:10:53 +0100},
+	Publisher = {Clarendon Press},
+	Title = {{Quantum mechanics of molecular rate processes}},
+	Url = {http://cds.cern.ch/record/232111},
+	Year = {1969},
+	Bdsk-Url-1 = {http://cds.cern.ch/record/232111}}
+
+@article{Zhang2013,
+	Author = {Zhang, Jingfu and Shim, Jeong Hyun and Niemeyer, Ingo and Taniguchi, T. and Teraji, T. and Abe, H. and Onoda, S. and Yamamoto, T. and Ohshima, T. and Isoya, J. and Suter, Dieter},
+	Date-Added = {2020-11-09 13:07:25 +0100},
+	Date-Modified = {2020-11-09 13:07:36 +0100},
+	Doi = {10.1103/PhysRevLett.110.240501},
+	Issue = {24},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Jun},
+	Numpages = {5},
+	Pages = {240501},
+	Publisher = {American Physical Society},
+	Title = {Experimental Implementation of Assisted Quantum Adiabatic Passage in a Single Spin},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.110.240501},
+	Volume = {110},
+	Year = {2013},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.110.240501},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.110.240501}}
+
+@article{Streed2006,
+	Author = {Streed, Erik W. and Mun, Jongchul and Boyd, Micah and Campbell, Gretchen K. and Medley, Patrick and Ketterle, Wolfgang and Pritchard, David E.},
+	Date-Added = {2020-11-09 13:05:33 +0100},
+	Date-Modified = {2020-11-09 13:05:43 +0100},
+	Doi = {10.1103/PhysRevLett.97.260402},
+	Issue = {26},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Dec},
+	Numpages = {4},
+	Pages = {260402},
+	Publisher = {American Physical Society},
+	Title = {Continuous and Pulsed Quantum Zeno Effect},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.97.260402},
+	Volume = {97},
+	Year = {2006},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.97.260402},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.97.260402}}
+
+@article{Oberthaler1996,
+	Author = {Oberthaler, Markus K. and Abfalterer, Roland and Bernet, Stefan and Schmiedmayer, J\"org and Zeilinger, Anton},
+	Date-Added = {2020-11-09 13:04:32 +0100},
+	Date-Modified = {2020-11-09 13:04:42 +0100},
+	Doi = {10.1103/PhysRevLett.77.4980},
+	Issue = {25},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Dec},
+	Numpages = {0},
+	Pages = {4980--4983},
+	Publisher = {American Physical Society},
+	Title = {Atom Waves in Crystals of Light},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.77.4980},
+	Volume = {77},
+	Year = {1996},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.77.4980},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.77.4980}}
+
+@article{Navarro2003,
+	Author = {Navarro, B. and Egusquiza, I. L. and Muga, J. G. and Hegerfeldt, G. C.},
+	Date-Added = {2020-11-09 13:02:35 +0100},
+	Date-Modified = {2020-11-09 13:02:47 +0100},
+	Doi = {10.1103/PhysRevA.67.063819},
+	Issue = {6},
+	Journal = {Phys. Rev. A},
+	Month = {Jun},
+	Numpages = {9},
+	Pages = {063819},
+	Publisher = {American Physical Society},
+	Title = {Suppression of Rabi oscillations for moving atoms},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.67.063819},
+	Volume = {67},
+	Year = {2003},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.67.063819},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.67.063819}}
+
+@article{Damborenea2002,
+	Author = {Damborenea, J. A. and Egusquiza, I. L. and Hegerfeldt, G. C. and Muga, J. G.},
+	Date-Added = {2020-11-09 13:00:28 +0100},
+	Date-Modified = {2020-11-09 13:00:43 +0100},
+	Doi = {10.1103/PhysRevA.66.052104},
+	Issue = {5},
+	Journal = {Phys. Rev. A},
+	Month = {Nov},
+	Numpages = {8},
+	Pages = {052104},
+	Publisher = {American Physical Society},
+	Title = {Measurement-based approach to quantum arrival times},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.66.052104},
+	Volume = {66},
+	Year = {2002},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.66.052104},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.66.052104}}
+
+@article{Hegerfeldt1996,
+	Abstract = {For the time development of a single system in the quantum jump approach or for quantum trajectories one requires the conditional (reduced) Hamiltonian between jumps and the reset operator after a jump. Explicit expressions for them are derived for a general N-level system by employing the same assumptions as in the usual derivation of the Bloch equations. We discuss a possible minor problem with positivity for these expressions as well as for the corresponding Bloch equations.},
+	Author = {Gerhard C Hegerfeldt and Dirk G Sondermann},
+	Date-Added = {2020-11-09 12:47:31 +0100},
+	Date-Modified = {2020-11-09 12:47:42 +0100},
+	Doi = {10.1088/1355-5111/8/1/010},
+	Journal = {Quantum and Semiclassical Optics: Journal of the European Optical Society Part B},
+	Month = {feb},
+	Number = {1},
+	Pages = {121--132},
+	Publisher = {{IOP} Publishing},
+	Title = {Conditional Hamiltonian and reset operator in the quantum jump approach},
+	Url = {https://doi.org/10.1088%2F1355-5111%2F8%2F1%2F010},
+	Volume = {8},
+	Year = {1996},
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F1355-5111%2F8%2F1%2F010},
+	Bdsk-Url-2 = {https://doi.org/10.1088/1355-5111/8/1/010}}
+
+@inbook{Ruschhaupt2009,
+	Abstract = {Quantum particles are characterized, for a given preparation, by a fundamental stochasticity of their observable features, such as positions, momenta, energies, or times, e.g., times of arrival at a detector in time-of-flight experiments. In quantum theory the preparation stage is encoded in a wave function, whereas averages or statistical moments of the observables are calculated by a well-known prescription (the expectation value integral) from self-adjoint operators and their powers: this is at least the case for position, momentum, or energy. In fact, the entire statistical distributions are given by the square modulus of the overlap of the wave function with the corresponding eigenstates.},
+	Address = {Berlin, Heidelberg},
+	Author = {Ruschhaupt, Andreas and Muga, J. Gonzalo and Hegerfeldt, Gerhard C.},
+	Booktitle = {Time in Quantum Mechanics - Vol. 2},
+	Date-Added = {2020-11-09 12:42:37 +0100},
+	Date-Modified = {2020-11-09 12:42:37 +0100},
+	Doi = {10.1007/978-3-642-03174-8_4},
+	Editor = {Muga, Gonzalo and Ruschhaupt, Andreas and del Campo, Adolfo},
+	Isbn = {978-3-642-03174-8},
+	Pages = {65--96},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Detector Models for the Quantum Time of Arrival},
+	Url = {https://doi.org/10.1007/978-3-642-03174-8_4},
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-642-03174-8_4}}
+
+@article{Potton2004,
+	Abstract = {The application of reciprocity principles in optics has a long history that goes back to Stokes, Lorentz, Helmholtz and others. Moreover, optical applications need to be seen in the context of applications of reciprocity in particle scattering, acoustics, seismology and the solution of inverse problems, generally. In some of these other fields vector wave propagation is, as it is in optics, of the essence. For this reason the simplified approach to light wave polarization developed by, and named for, Jones is explored initially to see how and to what extent it encompasses reciprocity. The characteristic matrix of a uniform dielectric layer, used in the analysis of interference filters and mirrors, is reciprocal except when the layer is magneto-optical. The way in which the reciprocal nature of a characteristic matrix can be recognized is discussed next. After this, work on the influence of more realistic attributes of a dielectric stack on reciprocity is reviewed. Some of the numerous technological applications of magneto-optic non-reciprocal media are identified and the potential of a new class of non-reciprocal components is briefly introduced. Finally, the extension of the classical reciprocity concept to systems containing components that have nonlinear optical response is briefly mentioned.},
+	Author = {R J Potton},
+	Date-Added = {2020-11-09 12:34:45 +0100},
+	Date-Modified = {2020-11-09 12:34:45 +0100},
+	Doi = {10.1088/0034-4885/67/5/r03},
+	Journal = {Reports on Progress in Physics},
+	Month = {apr},
+	Number = {5},
+	Pages = {717--754},
+	Publisher = {{IOP} Publishing},
+	Title = {Reciprocity in optics},
+	Url = {https://doi.org/10.1088%2F0034-4885%2F67%2F5%2Fr03},
+	Volume = {67},
+	Year = 2004,
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F0034-4885%2F67%2F5%2Fr03},
+	Bdsk-Url-2 = {https://doi.org/10.1088/0034-4885/67/5/r03}}
+
+@article{Peng2014,
+	Abstract = {Optical systems combining balanced loss and gain provide a unique platform to implement classical analogues of quantum systems described by non-Hermitian parity--time (PT)-symmetric Hamiltonians. Such systems can be used to create synthetic materials with properties that cannot be attained in materials having only loss or only gain. Here we report PT-symmetry breaking in coupled optical resonators. We observed non-reciprocity in the PT-symmetry-breaking phase due to strong field localization, which significantly enhances nonlinearity. In the linear regime, light transmission is reciprocal regardless of whether the symmetry is broken or unbroken. We show that in one direction there is a complete absence of resonance peaks whereas in the other direction the transmission is resonantly enhanced, a feature directly associated with the use of resonant structures. Our results could lead to a new generation of synthetic optical systems enabling on-chip manipulation and control of light propagation.},
+	Author = {Peng, Bo and {\"O}zdemir, {\c S}ahin Kaya and Lei, Fuchuan and Monifi, Faraz and Gianfreda, Mariagiovanna and Long, Gui Lu and Fan, Shanhui and Nori, Franco and Bender, Carl M. and Yang, Lan},
+	Da = {2014/05/01},
+	Date-Added = {2020-11-09 12:32:42 +0100},
+	Date-Modified = {2020-11-09 12:32:42 +0100},
+	Doi = {10.1038/nphys2927},
+	Id = {Peng2014},
+	Isbn = {1745-2481},
+	Journal = {Nature Physics},
+	Number = {5},
+	Pages = {394--398},
+	Title = {Parity--time-symmetric whispering-gallery microcavities},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1038/nphys2927},
+	Volume = {10},
+	Year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1038/nphys2927}}
+
+@article{Fan2012,
+	Abstract = {We show that the structure demonstrated by Feng et al. (Reports, 5 August 2011, p. 729) cannot enable optical isolation because it possesses a symmetric scattering matrix. Moreover, one cannot construct an optical isolator by incorporating this structure into any system as long as the system is linear and time-independent and is described by materials with a scalar dielectric function.},
+	Author = {Fan, Shanhui and Baets, Roel and Petrov, Alexander and Yu, Zongfu and Joannopoulos, John D. and Freude, Wolfgang and Melloni, Andrea and Popovi{\'c}, Milo{\v s} and Vanwolleghem, Mathias and Jalas, Dirk and Eich, Manfred and Krause, Michael and Renner, Hagen and Brinkmeyer, Ernst and Doerr, Christopher R.},
+	Date-Added = {2020-11-09 12:30:53 +0100},
+	Date-Modified = {2020-11-09 12:31:00 +0100},
+	Doi = {10.1126/science.1216682},
+	Eprint = {https://science.sciencemag.org/content/335/6064/38.2.full.pdf},
+	Issn = {0036-8075},
+	Journal = {Science},
+	Number = {6064},
+	Pages = {38--38},
+	Publisher = {American Association for the Advancement of Science},
+	Title = {Comment on {\textquotedblleft}Nonreciprocal Light Propagation in a Silicon Photonic Circuit{\textquotedblright}},
+	Url = {https://science.sciencemag.org/content/335/6064/38.2},
+	Volume = {335},
+	Year = {2012},
+	Bdsk-Url-1 = {https://science.sciencemag.org/content/335/6064/38.2},
+	Bdsk-Url-2 = {https://doi.org/10.1126/science.1216682}}
+
+@article{Feng2011,
+	Abstract = {Optical communications and computing require on-chip nonreciprocal light propagation to isolate and stabilize different chip-scale optical components. We have designed and fabricated a metallic-silicon waveguide system in which the optical potential is modulated along the length of the waveguide such that nonreciprocal light propagation is obtained on a silicon photonic chip. Nonreciprocal light transport and one-way photonic mode conversion are demonstrated at the wavelength of 1.55 micrometers in both simulations and experiments. Our system is compatible with conventional complementary metal-oxide-semiconductor processing, providing a way to chip-scale optical isolators for optical communications and computing.},
+	Author = {Feng, Liang and Ayache, Maurice and Huang, Jingqing and Xu, Ye-Long and Lu, Ming-Hui and Chen, Yan-Feng and Fainman, Yeshaiahu and Scherer, Axel},
+	Date-Added = {2020-11-09 12:29:02 +0100},
+	Date-Modified = {2020-11-09 12:29:11 +0100},
+	Doi = {10.1126/science.1206038},
+	Eprint = {https://science.sciencemag.org/content/333/6043/729.full.pdf},
+	Issn = {0036-8075},
+	Journal = {Science},
+	Number = {6043},
+	Pages = {729--733},
+	Publisher = {American Association for the Advancement of Science},
+	Title = {Nonreciprocal Light Propagation in a Silicon Photonic Circuit},
+	Url = {https://science.sciencemag.org/content/333/6043/729},
+	Volume = {333},
+	Year = {2011},
+	Bdsk-Url-1 = {https://science.sciencemag.org/content/333/6043/729},
+	Bdsk-Url-2 = {https://doi.org/10.1126/science.1206038}}
+
+@article{Alana2020,
+	Abstract = {A non-Abelian group of 16 symmetry operations on (generally) non-Hermitian discrete Hamiltonians represented by matrices is studied. The symmetry operations are described by unitary/antiunitary superoperators that arise when combining three basic generating operations with simple `geometric' interpretations. The corresponding Hamiltonian symmetries occur when the Hamiltonian remains invariant under the superoperator action. These symmetries include PT-symmetry and Hermiticity as particular cases. The interplay between the group of symmetry operations and Hamiltonian symmetries is analyzed systematically by introducing the concepts of equivalent operations and associated symmetries. Spectral properties implied by some of the symmetries are described.},
+	Author = {A Ala{\~{n}}a and S Mart{\'{\i}}nez-Garaot and M A Sim{\'{o}}n and J G Muga},
+	Date-Added = {2020-11-09 12:25:15 +0100},
+	Date-Modified = {2020-11-09 12:25:26 +0100},
+	Doi = {10.1088/1751-8121/ab7781},
+	Journal = {Journal of Physics A: Mathematical and Theoretical},
+	Month = {mar},
+	Number = {13},
+	Pages = {135304},
+	Publisher = {{IOP} Publishing},
+	Title = {Symmetries of ({\textdollar}$\lbrace$N {\textbackslash}times N$\rbrace${\textdollar} ) non-Hermitian Hamiltonian matrices},
+	Url = {https://doi.org/10.1088%2F1751-8121%2Fab7781},
+	Volume = {53},
+	Year = 2020,
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F1751-8121%2Fab7781},
+	Bdsk-Url-2 = {https://doi.org/10.1088/1751-8121/ab7781}}
+
+@inbook{Mostafazadeh2018,
+	Author = {Mostafazadeh, Ali},
+	Booktitle = {Parity-time Symmetry and Its Applications},
+	Date-Added = {2020-11-09 12:01:26 +0100},
+	Date-Modified = {2020-11-09 12:01:26 +0100},
+	Doi = {10.1007/978-981-13-1247-2_4},
+	Pages = {75-121},
+	Title = {Scattering Theory and PT-Symmetry},
+	Url = {https://app.dimensions.ai/details/publication/pub.1110226134 and http://arxiv.org/pdf/1711.05450},
+	Year = {2018},
+	Bdsk-Url-1 = {https://app.dimensions.ai/details/publication/pub.1110226134%20and%20http://arxiv.org/pdf/1711.05450},
+	Bdsk-Url-2 = {https://doi.org/10.1007/978-981-13-1247-2_4}}
+
+@article{Jerkins2010,
+	Author = {Jerkins, M. and Chavez, I. and Even, U. and Raizen, M. G.},
+	Date-Added = {2020-11-09 11:55:55 +0100},
+	Date-Modified = {2020-11-09 11:56:06 +0100},
+	Doi = {10.1103/PhysRevA.82.033414},
+	Issue = {3},
+	Journal = {Phys. Rev. A},
+	Month = {Sep},
+	Numpages = {5},
+	Pages = {033414},
+	Publisher = {American Physical Society},
+	Title = {Efficient isotope separation by single-photon atomic sorting},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.82.033414},
+	Volume = {82},
+	Year = {2010},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.82.033414},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.82.033414}}
+
+@article{Raizen2009,
+	Abstract = {Recent work provides a general two-step solution to trapping and cooling of atoms. The first step is magnetic stopping of paramagnetic atoms with the use of a sequence of pulsed fields. The second step is single-photon cooling, which is based on a one-way barrier. This cooling method is related intimately to the historic problem of {\textquotedblleft}Maxwell{\textquoteright}s Demon{\textquotedblright} and subsequent work by L. Szilard. Here, I discuss the connections between single-photon cooling and information entropy. I also outline future application of these methods to fundamental tests with hydrogen isotopes.},
+	Author = {Raizen, Mark G.},
+	Date-Added = {2020-11-09 11:54:07 +0100},
+	Date-Modified = {2020-11-09 11:54:13 +0100},
+	Doi = {10.1126/science.1171506},
+	Eprint = {https://science.sciencemag.org/content/324/5933/1403.full.pdf},
+	Issn = {0036-8075},
+	Journal = {Science},
+	Number = {5933},
+	Pages = {1403--1406},
+	Publisher = {American Association for the Advancement of Science},
+	Title = {Comprehensive Control of Atomic Motion},
+	Url = {https://science.sciencemag.org/content/324/5933/1403},
+	Volume = {324},
+	Year = {2009},
+	Bdsk-Url-1 = {https://science.sciencemag.org/content/324/5933/1403},
+	Bdsk-Url-2 = {https://doi.org/10.1126/science.1171506}}
+
+@article{Ruschhaupt2006b,
+	Abstract = {We discuss the relationship between recent proposals of `atom diodes' or one-way barriers for ultracold atoms and a Maxwell demon valve: in particular the way in which these proposals make use of dissipation via a one-photon spontaneous emission and avoid violation of the second law.},
+	Author = {A Ruschhaupt and J G Muga and M G Raizen},
+	Date-Added = {2020-11-09 11:50:34 +0100},
+	Date-Modified = {2020-11-09 11:50:41 +0100},
+	Doi = {10.1088/0953-4075/39/18/012},
+	Journal = {Journal of Physics B: Atomic, Molecular and Optical Physics},
+	Month = {sep},
+	Number = {18},
+	Pages = {3833--3838},
+	Publisher = {{IOP} Publishing},
+	Title = {One-photon atomic cooling with an optical Maxwell demon valve},
+	Url = {https://doi.org/10.1088%2F0953-4075%2F39%2F18%2F012},
+	Volume = {39},
+	Year = 2006,
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F0953-4075%2F39%2F18%2F012},
+	Bdsk-Url-2 = {https://doi.org/10.1088/0953-4075/39/18/012}}
+
+@article{Dudarev2005,
+	Abstract = {We describe the statistical mechanics of a new method to produce
+very cold atoms or molecules. The method results from trapping a
+gas in a potential well, and sweeping through the well a
+semi-permeable barrier, one that allows particles to leave but
+not to return. If the sweep is sufficiently slow, all the
+particles trapped in the well compress into a very cold gas. We
+derive analytical expressions for the velocity distribution of
+particles in the cold gas, compare these results with numerical
+simulations, and discuss limitations on reduction in energy due
+to imperfections of the barrier.},
+	Author = {A. M Dudarev and M Marder and Q Niu and N. J Fisch and M. G Raizen},
+	Date-Added = {2020-11-09 11:48:18 +0100},
+	Date-Modified = {2020-11-09 11:48:25 +0100},
+	Doi = {10.1209/epl/i2005-10051-1},
+	Journal = {Europhysics Letters ({EPL})},
+	Month = {jun},
+	Number = {6},
+	Pages = {761--767},
+	Publisher = {{IOP} Publishing},
+	Title = {Statistical mechanics of an optical phase space compressor},
+	Url = {https://doi.org/10.1209%2Fepl%2Fi2005-10051-1},
+	Volume = {70},
+	Year = 2005,
+	Bdsk-Url-1 = {https://doi.org/10.1209%2Fepl%2Fi2005-10051-1},
+	Bdsk-Url-2 = {https://doi.org/10.1209/epl/i2005-10051-1}}
+
+@article{Ruschhaupt2007,
+	Author = {Ruschhaupt, A. and Muga, J. G.},
+	Date-Added = {2020-11-09 11:45:46 +0100},
+	Date-Modified = {2020-11-09 11:45:59 +0100},
+	Doi = {10.1103/PhysRevA.76.013619},
+	Issue = {1},
+	Journal = {Phys. Rev. A},
+	Month = {Jul},
+	Numpages = {9},
+	Pages = {013619},
+	Publisher = {American Physical Society},
+	Title = {Three-dimensional effects in atom diodes: Atom-optical devices for one-way motion},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.76.013619},
+	Volume = {76},
+	Year = {2007},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.76.013619},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.76.013619}}
+
+@article{Ruschhaupt2006a,
+	Author = {Ruschhaupt, A. and Muga, J. G.},
+	Date-Added = {2020-11-09 11:43:25 +0100},
+	Date-Modified = {2020-11-09 11:43:46 +0100},
+	Doi = {10.1103/PhysRevA.73.013608},
+	Issue = {1},
+	Journal = {Phys. Rev. A},
+	Month = {Jan},
+	Numpages = {8},
+	Pages = {013608},
+	Publisher = {American Physical Society},
+	Title = {Adiabatic interpretation of a two-level atom diode, a laser device for unidirectional transmission of ground-state atoms},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.73.013608},
+	Volume = {73},
+	Year = {2006},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.73.013608},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.73.013608}}
+
+@book{Rex1990,
+	Address = {Princeton, NJ},
+	Author = {Rex, Andrew F and Leff, Harvey S},
+	Date-Added = {2020-11-09 11:38:34 +0100},
+	Date-Modified = {2020-11-09 11:38:42 +0100},
+	Publisher = {Princeton Univ. Press},
+	Series = {Princeton Phys.},
+	Title = {{Maxwell's demon: entropy, information, computing}},
+	Url = {https://cds.cern.ch/record/250030},
+	Year = {1990},
+	Bdsk-Url-1 = {https://cds.cern.ch/record/250030}}
+
+@inbook{Maxwell1875,
+	Address = {London},
+	Author = {J. C. Maxwell},
+	Date-Added = {2020-11-09 11:25:38 +0100},
+	Date-Modified = {2020-11-09 11:28:21 +0100},
+	Edition = {4},
+	Pages = {328-329},
+	Publisher = {Longmans, Green and Co.},
+	Title = {Theory of Heat},
+	Year = {1875}}
 
 @book{Born1964,
 	Address = {Oxford},
@@ -1089,7 +1560,7 @@ local complex potentials with a real part.},
 	Abstract = {A physical realization of scattering by -symmetric potentials is provided: we show that the Maxwell equations, for an electromagnetic wave travelling along a planar slab waveguide filled with gain and absorbing media in contiguous regions, can be approximated in a parameter range by a Schr{\"o}dinger equation with a -symmetric scattering potential.},
 	Author = {A Ruschhaupt and F Delgado and J G Muga},
 	Date-Added = {2020-11-03 17:03:08 +0100},
-	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-09 12:02:57 +0100},
 	Doi = {10.1088/0305-4470/38/9/l03},
 	Journal = {Journal of Physics A: Mathematical and General},
 	Month = {feb},
@@ -1099,7 +1570,7 @@ local complex potentials with a real part.},
 	Title = {Physical realization of -symmetric potential scattering in a planar slab waveguide},
 	Url = {https://doi.org/10.1088%2F0305-4470%2F38%2F9%2Fl03},
 	Volume = {38},
-	Year = 2005,
+	Year = {2005},
 	Bdsk-Url-1 = {https://doi.org/10.1088%2F0305-4470%2F38%2F9%2Fl03},
 	Bdsk-Url-2 = {https://doi.org/10.1088/0305-4470/38/9/l03}}
 
