moved appendices to the end of the document

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -18,6 +18,8 @@
 \setlength{\parindent}{15pt}
 \usepackage{indentfirst} %para que ponga el indent en el primer parrafo tambien, sino no lo hace
 
+
+
 \hypersetup{urlcolor=blue, colorlinks=true}  % Colours hyperlinks in blue, but this can be distracting if there are many links.
 
 
@@ -201,7 +203,13 @@ Do not forget about the people that has been by your side and supported you.
 %\addcontentsline{toc}{part}{Appendix}
 \addtocontents{toc}{\vspace{0.6em}}
 
-\input{./Appendices/AppendixA}	% Interaction versus asymmetry for adiabatic following
+\input{./Appendices/Appendix_ScatteringFormalism} %Review of scattering theory formalism
+\input{./Appendices/Appendix_AlternativeFormulationOfPseudoHermiticity} %Alternative formulation of $A$-pseudohermitian symmetries as ordinary (commuting) symmetries
+\input{./Appendices/Appendix_SeparablePotentials} %Properties of separable potentials
+\input{./Appendices/Appendix_NumericalCalculationOfTandR} %Numerical calculation of transmission and reflection coefficients
+\input{./Appendices/Appendix_SteadyStateEquations} %Full set of steady-state equations for the components of $\mathbb{C}^{s.s}$
+\input{./Appendices/Appendix_SpectralDensity} %Complete expressions for the Spectral Density Matrix
+
 
 \addtocontents{toc}{\vspace{0.6em}}  % Add a gap in the Contents, for aesthetics
 \backmatter
