--- a/portada.tex
+++ b/portada.tex
@@ -7,7 +7,7 @@
 
 \hrule\vspace*{0.5cm}
 
-{\LARGE \bf {Shortcuts to adiabaticity and heat transport in trapped ions}}
+{\LARGE \bf {Asymmetric Quantum Devices and Heat Transport}}
 
 \vspace{0.7cm}\hrule \vspace{2.75cm}
 {\LARGE \bf{Miguel \'{A}ngel Sim\'{o}n Mart\'{i}nez}}\\
