Fixed ugliest overfull boxes

--- a/Appendices/Appendix_AlternativeFormulationOfPseudoHermiticity.tex
+++ b/Appendices/Appendix_AlternativeFormulationOfPseudoHermiticity.tex
@@ -69,7 +69,7 @@ Consider the \textit{on shell} representation of $\tau_c$, $\braket{p^+}{\tau q^
     \end{pmatrix}.
 \end{equation}
 %
-Since $\tau$ has to be invertible, $\mathsf{C}(p)$ must be invertible as well. This implies  $C_+(p)C_+(-p) - C_-(p)C_-(p) \neq 0$.
+Since $\tau$ has to be invertible, $\mathsf{C}(p)$ must be invertible as well. This implies \linebreak  $C_+(p)C_+(-p) - C_-(p)C_-(p) \neq 0$.
 
 In the following sections we construct expressions for $B$, in section 1 for $A$ linear, and in section 2 for $A$ antilinear.
 % on the continuum.
